--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <!-- this is where the head tags go-->
-
-
+<head>
+</head>
 <!-- opening body tag  -->
     
 <!--   header tags go here-->
