--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <html>
-<!-- this is where the head tags go-->
 <head>
+<script src = "phaser.min.js"></script>
+<script src = "mainState.js"></script>
+<script src = "boot.js"></script>
+<script src = "preload.js"></script>
+<script src = "gametitle.js"></script>
+<script src = "gameover.js"></script>
 </head>
-<!-- opening body tag  -->
 <body>  
 <!--   header tags go here-->
 <header>
 </header>
-<!--   closing body tags-->
+<script>
+      (function(){
+      var game = new Phaser.Game(500, 200, Phaser.CANVAS, "game");
+          game.state.add("state1",mainState);
+          game.state.add("Boot",boot);
+          game.state.add("Preload",preload);
+          game.state.add("GameTitle",gameTitle);
+          game.state.add("GameOver",gameOver);
+          game.state.start("Boot");
+      })();  
+        
+    </script>
 </body>
-
 </html>
