--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           game.state.add("Preload",preload);
           game.state.add("GameTitle",gameTitle);
           game.state.add("GameOver",gameOver);
-          game.state.start("Boot");
+            game.state.add("characterSelection",playGame);
+          game.state.start("characterSelection");
       })();  
         
     </script>
