--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <script src = "phaser.min.js"></script>
-<script src = "mainState.js"></script>
 <script src = "boot.js"></script>
 <script src = "preload.js"></script>
 <script src = "gametitle.js"></script>
+<script src = "mainState.js"></script>
 <script src = "gameover.js"></script>
 </head>
 <body>  
@@ -12,14 +12,14 @@
 </header>
 <script>
       (function(){
-      var game = new Phaser.Game(1420, 500, Phaser.CANVAS, "game");
-          game.state.add("state1",mainState);
+      var game = new Phaser.Game(1420, 500, Phaser.AUTO, "game");
+         
           game.state.add("Boot",boot);
           game.state.add("Preload",preload);
           game.state.add("GameTitle",gameTitle);
+          game.state.add("state1",mainState);
           game.state.add("GameOver",gameOver);
-            game.state.add("characterSelection",playGame);
-          game.state.start("characterSelection");
+          game.state.start("Boot");
       })();  
         
     </script>
