--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           game.state.add("gameTitle",gameTitle);
           game.state.add("state1",mainState);
           game.state.add("gameOver",gameOver);
+          game.state.add("dinoMite",dinoMite);
           game.state.start("boot");
-          game.state.start("dinoMite",dinoMite);
+          
       })();  
         
     </script>
