added instructions button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src = "mainState.js"></script>
 <script src = "gameover.js"></script>
 <script src = "DINOMITE.js"></script>
+<script src = "instructions.js"></script>
 </head>
 <body>  
 
@@ -22,6 +23,7 @@
           game.state.add("state1",mainState);
           game.state.add("gameOver",gameOver);
           game.state.add("dinoMite",dinoMite);
+          game.state.add("instructions",instructions);
           game.state.start("boot");
           
       })();  
